# f5mobile-dashboard

./: .env  Dockerfile  compose.yaml  config.py  main.py  pyproject.toml  readme.txt  requirements.txt  schemas.py
routes/: categories.py  products.py
